# Nyankichi_make_LLM_OpenCL

./: .gitignore  compare_outputs.ps1  create_or_check_repo.ps1  gpu_test_cpu.txt  gpu_test_gpu.txt  print_line_chars.ps1  test_if.bat  tmp_test_output.txt
.github/workflows/: ci.yml
make_LLM_CUDA/: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DEBUG_REPORT.md  HOW_IT_WORKS.md  README_JP.md  TRAINING_AND_LOGGING.md  both.bat  build.bat  build_cuda.bat  build_cuda.ps1  build_msvc.bat  build_msvc_nvcc.bat  build_nvcc.bat  build_opencl.bat  build_simple.ps1  infer.bat  infer_opencl.bat  train.bat  train_opencl.bat
make_LLM_CUDA/data/: training_data.txt
make_LLM_CUDA/include/: math_cuda.h  math_opencl.h  tensor_cuda.h  tensor_opencl.h  transformer_cuda.h  transformer_opencl.h
make_LLM_CUDA/src/: main.cu  main_opencl.cpp  math_cuda.cu  math_dispatch.cpp  math_dispatch.h  math_opencl.cpp  tensor_cuda.cu  tensor_opencl.cpp  test_gradients.cpp  test_transformer_poc.cpp  transformer_cuda.cu  transformer_opencl.cpp
make_llm_High/: CMakeLists.txt  LLM_INTEGRATION.md
make_llm_High/include/: dense_tile.h
make_llm_High/src/: dense_tile.cpp  main_bench.cpp  test_batched_gemm.cpp  test_microkernel.cpp  test_transformer_layer.cpp
tools/: cpuid_check.cpp
